# projectSDLcpp

Project_SDL_Part1/Project_SDL_Part1_base/: CMakeLists.txt  Character.cpp  Character.h  Ground.cpp  Ground.h  GroundUtils.h  Observer.h  Position.cpp  Position.h  Project_SDL1.cpp  Project_SDL1.h  RandomPosition.cpp  RandomPosition.h  Sheep.cpp  Sheep.h  SheepObserver.h  Sheperd.cpp  Sheperd.h  Sheperd_dog.cpp  Sheperd_dog.h  Wolf.cpp  Wolf.h  WolfObserver.h  application.cpp  application.h  character.cpp  character.h  ground.cpp  ground.h  main.cpp  position.cpp  position.h  sheep.cpp  sheep.h  sheperd.cpp  sheperd.h  sheperd_dog.cpp  sheperd_dog.h  wolf.cpp  wolf.h
